2009-02-10  David Hyatt  <hyatt@apple.com>

        Shrink the size of all RenderObjects (except for RenderInlines) by 4 bytes.  This patch moves the cached vertical position member to RenderInlines,
        since they were the only objects being queried across multiple lines.
        
        Reviewed by Sam Weinig

        * rendering/InlineFlowBox.cpp:
        (WebCore::verticalPositionForBox):
        (WebCore::InlineFlowBox::computeLogicalBoxHeights):
        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::verticalPosition):
        * rendering/RenderBoxModelObject.h:
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::RenderInline):
        (WebCore::RenderInline::verticalPositionFromCache):
        * rendering/RenderInline.h:
        (WebCore::RenderInline::invalidateVerticalPosition):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::RenderObject):
        * rendering/RenderObject.h:
        * rendering/RenderText.cpp:
        * rendering/RenderText.h:
        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren):

2009-02-10  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=23868
        Fix code style issues: removed 80-col wrapping, incorrect include style, if statement body on same line.

        * bindings/v8/custom/V8HTMLInputElementCustom.cpp:
        * bindings/v8/custom/V8HTMLOptionsCollectionCustom.cpp:

2009-02-10  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23868
        Add HTMLInputElement and HTMLOptionsCollection V8 custom bindings.

        * bindings/v8/custom/V8HTMLInputElementCustom.cpp: Added.
        (WebCore::ACCESSOR_GETTER):
        (WebCore::ACCESSOR_SETTER):
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8HTMLOptionsCollectionCustom.cpp: Added.